--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,9 @@
 PHP-Util Changelog
 --------------------
 
+0.3.2 (8/30/14)
+	- Move Xml class to own file
+
 0.3.1 (8/25/14)
 	- Add $negate option to array_filter_keys()
 	- Removed some less used functions
